Z-index fix for auto-format dialog

--- a/css/ukeGeeks.music.css
+++ b/css/ukeGeeks.music.css
@@ -305,3 +305,7 @@
   z-index: 7;
 }
 
+#reformatDlg {
+  z-index: 8;
+}
+
